--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CSS Endless Road 404</title>
+  <title>KABARO MAY TANONG AKO</title>
   <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet"><link rel="stylesheet" href="./style.css">
 
 </head>
