--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     </a></div>
        <!--  CREDIT TO Anya Melnyk AND THE PEN
        Moving Car Pure CSS THAT HELPED ME
-       MAKE A MOVING ROAD. WATCH THE PEN ON:
-       https://codepen.io/slyka85/pen/vLwboX -->
+       MAKE A MOVING ROAD.
       <div class="road">
           <div class="road-lines"></div>
           <div class="road-concrete"></div>
