--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   <div class="centeredDiv">
   <h1 class="error">KABARO</h1>
-  <p class="error bigScreens">Kailan Kayo Babalik ng <br> Dagupan ey?</p>
-   <p class="error smallScreens">Kailan Kayo Babalik ng <br> Dagupan ey?</p>
+  <p class="error bigScreens">Tara na Byahe na<br> Babalik na ng Dagupan</p>
+   <p class="error smallScreens">Tara na Byahe na<br> Babalik na ng Dagupan</p> 
  
   <a href="">
-    <button class="button" id="button">JEPOY NG MIDSHIP</button>   
+    <button class="button" id="button">KLASE NG MIDSHIP</button>   
     </a></div>
        <!--  CREDIT TO Anya Melnyk AND THE PEN
        Moving Car Pure CSS THAT HELPED ME
