--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <div class="centeredDiv">
   <h1 class="error">KABARO</h1>
-  <p class="error bigScreens">Tara na Byahe na<br> Babalik na ng Dagupan</p>
-   <p class="error smallScreens">Tara na Byahe na<br> Babalik na ng Dagupan</p> 
+  <p class="error bigScreens">Uwian nanaman <br> Babalik na ng Mangatarem</p>
+   <p class="error smallScreens">Uwian nanaman <br> Babalik na ng Mangatarem</p> 
  
   <a href="">
     <button class="button" id="button">KLASE NG MIDSHIP</button>   
